syntax = "proto3";

import "p2p/proto/class.proto";
import "p2p/proto/common.proto";
import "p2p/proto/transaction.proto";
import "p2p/proto/sync/transaction.proto";
// TODO(alonl): remove this import (used only for the old Transaction struct as an intermediate step)
import "p2p/proto/consensus/consensus.proto";


option go_package = "github.com/starknet-io/starknet-p2pspecs/p2p/proto/mempool/transaction";

// Doesn't contain L1Handler, as those don't need to be propagated and can be downloaded from L1.
message MempoolTransaction {
    message DeclareV3 {
        Transaction.DeclareV3 declare_v3 = 1;
        Cairo1Class contract_class = 2;
    }

    oneof txn {
        DeclareV3 declare_v3 = 1;
        Transaction.DeployAccountV3 deploy_account_v3 = 2;
        Transaction.InvokeV3 invoke_v3 = 3;
    }
    Hash transaction_hash = 4;
}
